--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,12 +35,16 @@ header {
 
 
 @media (max-width: 400px) {
+
+  header{
+    height: 70px;
+  }
   .title{
-    font-size: 20px;
+    font-size: 25px;
   }
 
   .logo {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
   }
 }
